Update demo Artifacts

--- a/inventory/intended/configs/DC1-LEAF1A.cfg
+++ b/inventory/intended/configs/DC1-LEAF1A.cfg
@@ -202,14 +202,17 @@ interface Management1
 interface Vlan110
    description Tenant_A_OP_Zone_1
    vrf Tenant_A_OP_Zone
+   ip address virtual 10.1.10.1/24
 !
 interface Vlan111
    description Tenant_A_OP_Zone_2
    vrf Tenant_A_OP_Zone
+   ip address virtual 10.1.11.1/24
 !
 interface Vlan112
    description Tenant_A_OP_Zone_3
    vrf Tenant_A_OP_Zone
+   ip address virtual 10.1.12.254/24
 !
 interface Vlan120
    description Tenant_A_WEB_Zone_1
@@ -218,6 +221,7 @@ interface Vlan120
 interface Vlan121
    description Tenant_A_WEBZone_2
    vrf Tenant_A_WEB_Zone
+   ip address virtual 10.1.21.1/24
 !
 interface Vlan130
    description Tenant_A_APP_Zone_1
@@ -226,18 +230,22 @@ interface Vlan130
 interface Vlan131
    description Tenant_A_APP_Zone_2
    vrf Tenant_A_APP_Zone
+   ip address virtual 10.1.31.254/24
 !
 interface Vlan140
    description Tenant_A_DB_BZone_1
    vrf Tenant_A_DB_Zone
+   ip address virtual 10.1.40.1/24
 !
 interface Vlan141
    description Tenant_A_DB_Zone_2
    vrf Tenant_A_DB_Zone
+   ip address virtual 10.1.41.1/24
 !
 interface Vlan150
    description Tenant_A_WAN_Zone_1
    vrf Tenant_A_WAN_Zone
+   ip address virtual 10.1.40.1/24
 !
 interface Vlan210
    description Tenant_B_OP_Zone_1
@@ -246,10 +254,12 @@ interface Vlan210
 interface Vlan211
    description Tenant_B_OP_Zone_2
    vrf Tenant_B_OP_Zone
+   ip address virtual 10.2.11.1/24
 !
 interface Vlan250
    description Tenant_B_WAN_Zone_1
    vrf Tenant_B_WAN_Zone
+   ip address virtual 10.2.50.1/24
 !
 interface Vlan310
    description Tenant_C_OP_Zone_1
