--- a/inventory/group_vars/DC1_TENANTS_NETWORKS.yml
+++ b/inventory/group_vars/DC1_TENANTS_NETWORKS.yml
@@ -16,19 +16,19 @@ tenants:
             name: Tenant_A_OP_Zone_1
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.1.10.0/24
+            ip_address_virtual: 10.1.10.1/24
           111:
             vni_override: 50111
             name: Tenant_A_OP_Zone_2
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.1.11.0/24
+            ip_address_virtual: 10.1.11.1/24
           112:
             vni_override: 50112
             name: Tenant_A_OP_Zone_3
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.1.12.0/24
+            ip_address_virtual: 10.1.12.254/24
       Tenant_A_WEB_Zone:
         vrf_vni: 11
         svis:
@@ -41,7 +41,7 @@ tenants:
             name: Tenant_A_WEBZone_2
             tags: [web]
             enabled: true
-            ip_subnet: 10.1.21.0/24
+            ip_address_virtual: 10.1.21.1/24
       Tenant_A_APP_Zone:
         vrf_vni: 12
         svis:
@@ -54,7 +54,7 @@ tenants:
             name: Tenant_A_APP_Zone_2
             tags: [app]
             enabled: true
-            ip_subnet: 10.1.31.0/24
+            ip_address_virtual: 10.1.31.254/24
       Tenant_A_DB_Zone:
         vrf_vni: 13
         svis:
@@ -62,12 +62,12 @@ tenants:
             name: Tenant_A_DB_BZone_1
             tags: [db, erp1]
             enabled: true
-            ip_subnet: 10.1.40.0/24
+            ip_address_virtual: 10.1.40.1/24
           141:
             name: Tenant_A_DB_Zone_2
             tags: [db]
             enabled: true
-            ip_subnet: 10.1.41.0/24
+            ip_address_virtual: 10.1.41.1/24
       Tenant_A_WAN_Zone:
         vrf_vni: 14
         svis:
@@ -75,7 +75,7 @@ tenants:
             name: Tenant_A_WAN_Zone_1
             tags: [wan]
             enabled: true
-            ip_subnet: 10.1.40.0/24
+            ip_address_virtual: 10.1.40.1/24
     l2vlans:
       160:
         vni_override: 55160
@@ -101,7 +101,7 @@ tenants:
             name: Tenant_B_OP_Zone_2
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.2.11.0/24
+            ip_address_virtual: 10.2.11.1/24
       Tenant_B_WAN_Zone:
         vrf_vni: 21
         svis:
@@ -109,7 +109,7 @@ tenants:
             name: Tenant_B_WAN_Zone_1
             tags: [wan]
             enabled: true
-            ip_subnet: 10.2.50.0/24
+            ip_address_virtual: 10.2.50.1/24
 
   # Tenant C Specific Information - VRFs / VLANs
   Tenant_C:
@@ -127,7 +127,7 @@ tenants:
             name: Tenant_C_OP_Zone_2
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.3.11.0/24
+            ip_subnet: 10.3.11.1/24
       Tenant_C_WAN_Zone:
         vrf_vni: 31
         svis:
@@ -135,4 +135,4 @@ tenants:
             name: Tenant_C_WAN_Zone_1
             tags: [wan]
             enabled: true
-            ip_subnet: 10.3.50.0/24
+            ip_subnet: 10.3.50.1/24
