--- a/inventory/intended/structured_configs/DC1-LEAF1B.yml
+++ b/inventory/intended/structured_configs/DC1-LEAF1B.yml
@@ -372,6 +372,7 @@ vlan_interfaces:
     tags: ['app']
     description: Tenant_A_APP_Zone_2
     vrf: Tenant_A_APP_Zone
+    ip_address_virtual: 10.1.31.254/24
   Vlan3011:
     tenant: Tenant_A
     type: underlay_peering
@@ -383,11 +384,13 @@ vlan_interfaces:
     tags: ['db', 'erp1']
     description: Tenant_A_DB_BZone_1
     vrf: Tenant_A_DB_Zone
+    ip_address_virtual: 10.1.40.1/24
   Vlan141:
     tenant: Tenant_A
     tags: ['db']
     description: Tenant_A_DB_Zone_2
     vrf: Tenant_A_DB_Zone
+    ip_address_virtual: 10.1.41.1/24
   Vlan3012:
     tenant: Tenant_A
     type: underlay_peering
@@ -399,16 +402,19 @@ vlan_interfaces:
     tags: ['opzone']
     description: Tenant_A_OP_Zone_1
     vrf: Tenant_A_OP_Zone
+    ip_address_virtual: 10.1.10.1/24
   Vlan111:
     tenant: Tenant_A
     tags: ['opzone']
     description: Tenant_A_OP_Zone_2
     vrf: Tenant_A_OP_Zone
+    ip_address_virtual: 10.1.11.1/24
   Vlan112:
     tenant: Tenant_A
     tags: ['opzone']
     description: Tenant_A_OP_Zone_3
     vrf: Tenant_A_OP_Zone
+    ip_address_virtual: 10.1.12.254/24
   Vlan3009:
     tenant: Tenant_A
     type: underlay_peering
@@ -420,6 +426,7 @@ vlan_interfaces:
     tags: ['wan']
     description: Tenant_A_WAN_Zone_1
     vrf: Tenant_A_WAN_Zone
+    ip_address_virtual: 10.1.40.1/24
   Vlan3013:
     tenant: Tenant_A
     type: underlay_peering
@@ -436,6 +443,7 @@ vlan_interfaces:
     tags: ['web']
     description: Tenant_A_WEBZone_2
     vrf: Tenant_A_WEB_Zone
+    ip_address_virtual: 10.1.21.1/24
   Vlan3010:
     tenant: Tenant_A
     type: underlay_peering
@@ -453,6 +461,7 @@ vlan_interfaces:
     tags: ['opzone']
     description: Tenant_B_OP_Zone_2
     vrf: Tenant_B_OP_Zone
+    ip_address_virtual: 10.2.11.1/24
   Vlan3019:
     tenant: Tenant_B
     type: underlay_peering
@@ -464,6 +473,7 @@ vlan_interfaces:
     tags: ['wan']
     description: Tenant_B_WAN_Zone_1
     vrf: Tenant_B_WAN_Zone
+    ip_address_virtual: 10.2.50.1/24
   Vlan3020:
     tenant: Tenant_B
     type: underlay_peering
