Add missing requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-ansible>=2.9.0rc4,<2.10
+ansible==2.9.6
+netaddr==0.7.19
+Jinja2==2.10.3
 requests==2.22.0
 treelib==1.5.5
-netaddr==0.7.19
-mkdocs==1.1
-mkdocs-bootswatch==1.1
-mkdocs-material==5.1.1
-mkdocs-material-extensions==1.0b2
-fontawesome-markdown==0.2.6
-pymdown-extensions==7.1
-mkdocs-bootswatch==1.1
-mkdocs-rtd-dropdown==1.0.2
-mkdocs-windmill==1.0.4
+pytest==5.4.2
+pytest-html==2.1.1
+ward==0.46.0b0
+git+https://github.com/batfish/pybatfish.git
+paramiko
