--- a/inventory/group_vars/CVP.yml
+++ b/inventory/group_vars/CVP.yml
@@ -18,30 +18,30 @@ ztp:
   clients:
   # GNS3 VM Request
     - name: gns3
-      mac: 00:50:56:86:8b:2f
+      mac: '00:50:56:86:8b:2f'
       ip4: 10.255.0.2
   # AVD/CVP Integration
     - name: DC1-SPINE1
-      mac: 0c:1d:c0:1d:62:01
+      mac: '0c:1d:c0:1d:62:01'
       ip4: 10.255.0.11
     - name: DC1-SPINE2
-      mac: 0c:1d:c0:1d:62:02
+      mac: '0c:1d:c0:1d:62:02'
       ip4: 10.255.0.12
     - name: DC1-LEAF1A
-      mac: 0c:1d:c0:1d:62:11
+      mac: '0c:1d:c0:1d:62:11'
       ip4: 10.255.0.13
     - name: DC1-LEAF1B
-      mac: 0c:1d:c0:1d:62:12
+      mac: '0c:1d:c0:1d:62:12'
       ip4: 10.255.0.14
     - name: DC1-LEAF2A
-      mac: 0c:1d:c0:1d:62:21
+      mac: '0c:1d:c0:1d:62:21'
       ip4: 10.255.0.15
     - name: DC1-LEAF2B
-      mac: 0c:1d:c0:1d:62:22
+      mac: '0c:1d:c0:1d:62:22'
       ip4: 10.255.0.16
     - name: DC1-L2LEAF1A
-      mac: 0c:1d:c0:1d:62:13
+      mac: '0c:1d:c0:1d:62:13'
       ip4: 10.255.0.17
     - name: DC1-L2LEAF2A
-      mac: 0c:1d:c0:1d:62:23
+      mac: '0c:1d:c0:1d:62:23'
       ip4: 10.255.0.18
