activate gather_facts for ZTP - Fix #10

--- a/playbooks/dc1-ztp-configuration.yml
+++ b/playbooks/dc1-ztp-configuration.yml
@@ -1,7 +1,7 @@
 ---
 - name: Configure ZTP/DHCP service on CloudVision
   hosts: cv_ztp
-  gather_facts: false
+  gather_facts: true
   tasks:
   - name: 'Execute ZTP configuration role'
     import_role:
