--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,7 +6,7 @@ retry_files_enabled = False
 filter_plugins = ansible-avd/plugins/filters
 roles_path = ansible-avd/roles
 library = ansible-avd/library
-collections_paths = ./ansible-cvp:./ansible-avd:../ansible-cvp:../ansible-avd:~/.ansible/collections:/usr/share/ansible/collections
+collections_paths = ~/.ansible/collections:./ansible-cvp:./ansible-avd:../ansible-cvp:../ansible-avd:/usr/share/ansible/collections
 action_plugins = /usr/lib/python2.7/site-packages/napalm_ansible/plugins/action
 jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
 # enable the YAML callback plugin.
