--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
-
 *.retry
 ansible-*
+.vscode
