--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-ansible==2.9.6
+ansible==2.10.0
 netaddr==0.7.19
-Jinja2==2.10.3
-requests==2.22.0
+Jinja2==2.11.3
 treelib==1.5.5
-pytest==5.4.2
-pytest-html==2.1.1
-ward==0.46.0b0
-git+https://github.com/batfish/pybatfish.git
-paramiko
+cvprac==1.0.5
+paramiko==2.7.1
+jsonschema==3.2.0
+requests==2.25.1
+PyYAML==5.4.1
+md-toc==7.1.0
