--- a/inventory/group_vars/DC1_FABRIC.yml
+++ b/inventory/group_vars/DC1_FABRIC.yml
@@ -4,26 +4,6 @@
 
 fabric_name: DC1_FABRIC
 
-# Point to Point Network Summary range, assigned as /31 for each
-# uplink interfaces
-# Assign range larger then total [spines * total potential leafs * 2]
-underlay_p2p_network_summary: 172.31.255.0/24
-
-# IP address range for evpn loopback for all switches in fabric,
-# assigned as /32s
-# Assign range larger then total spines + total leafs switches
-overlay_loopback_network_summary: 192.168.255.0/24
-
-# VTEP VXLAN Tunnel source loopback IP for leaf switches, assigned in /32s
-# Assign range larger then total leaf switches
-vtep_loopback_network_summary: 192.168.254.0/24
-
-# mlag pair IP assignment - assign blocks - Assign range larger then
-# total spines + total leafs switches
-mlag_ips:
-  leaf_peer_l3: 10.255.251.0/24
-  mlag_peer: 10.255.252.0/24
-
 # Enable vlan aware bundles
 vxlan_vlan_aware_bundles: true
 
@@ -38,10 +18,17 @@ bgp_peer_groups:
 
 # Spine Switches
 spine:
-  platform: vEOS-LAB
-  bgp_as: 65001
-  # defines the range of acceptable remote ASNs from leaf switches
-  leaf_as_range: 65101-65132
+  defaults:
+    platform: vEOS-LAB
+    bgp_as: 65001
+    loopback_ipv4_pool: 192.168.255.0/24
+    bgp_defaults:
+      - 'no bgp default ipv4-unicast'
+      - 'distance bgp 20 200 200'
+      - 'graceful-restart restart-time 300'
+      - 'graceful-restart'
+    mlag_peer_ipv4_pool: 10.255.252.0/24
+    mlag_peer_l3_ipv4_pool: 10.255.251.0/24
   nodes:
     DC1-SPINE1:
       id: 1
@@ -56,16 +43,24 @@ spine:
 
 l3leaf:
   defaults:
-    # virtual router mac for VNIs assigned to Leaf switches
-    # format: xx:xx:xx:xx:xx:xx
-    virtual_router_mac_address: 00:1c:73:00:dc:01
     platform: vEOS-LAB
-    bgp_as: 65100
-    spines: [DC1-SPINE1, DC1-SPINE2]
-    uplink_to_spine_interfaces: [Ethernet1, Ethernet2]
-    mlag_interfaces: [Ethernet3, Ethernet4]
-    spanning_tree_priority: 4096
+    loopback_ipv4_pool: 192.168.255.0/24
+    loopback_ipv4_offset: 2
+    vtep_loopback_ipv4_pool: 192.168.254.0/24
+    uplink_interfaces: ['Ethernet1', 'Ethernet2']
+    uplink_switches: ['DC1-SPINE1', 'DC1-SPINE2']
+    uplink_ipv4_pool: 172.31.255.0/24
+    mlag_interfaces: [ Ethernet3, Ethernet4 ]
+    mlag_peer_ipv4_pool: 10.255.252.0/24
+    mlag_peer_l3_ipv4_pool: 10.255.251.0/24
+    virtual_router_mac_address: 00:1c:73:00:dc:01
+    bgp_defaults:
+      - 'no bgp default ipv4-unicast'
+      - 'distance bgp 20 200 200'
+      - 'graceful-restart restart-time 300'
+      - 'graceful-restart'
     spanning_tree_mode: mstp
+    spanning_tree_priority: 16384
   node_groups:
     DC1_LEAF1:
       bgp_as: 65101
@@ -73,35 +68,39 @@ l3leaf:
         DC1-LEAF1A:
           id: 1
           mgmt_ip: 10.255.0.13/24
-          spine_interfaces: [Ethernet1, Ethernet1]
+          uplink_switch_interfaces: [Ethernet1, Ethernet1]
         DC1-LEAF1B:
           id: 2
           mgmt_ip: 10.255.0.14/24
-          spine_interfaces: [Ethernet2, Ethernet2]
+          uplink_switch_interfaces: [Ethernet2, Ethernet2]
     DC1_LEAF2:
       bgp_as: 65102
       nodes:
         DC1-LEAF2A:
           id: 3
           mgmt_ip: 10.255.0.15/24
-          spine_interfaces: [Ethernet3, Ethernet3]
+          uplink_switch_interfaces: [Ethernet3, Ethernet3]
         DC1-LEAF2B:
           id: 4
           mgmt_ip: 10.255.0.16/24
-          spine_interfaces: [Ethernet4, Ethernet4]
+          uplink_switch_interfaces: [Ethernet4, Ethernet4]
 
 
 l2leaf:
   defaults:
     platform: vEOS-LAB
-    parent_l3leafs: [ DC1-LEAF1A, DC1-LEAF1B ]
+    uplink_switches: ['DC1-LEAF1A', 'DC1-LEAF1B']
     uplink_interfaces: [ Ethernet1, Ethernet2 ]
     mlag_interfaces: [ Ethernet3, Ethernet4 ]
+    mlag_peer_ipv4_pool: 10.255.252.0/24
+    mlag_peer_l3_ipv4_pool: 10.255.251.0/24
+    virtual_router_mac_address: 00:1c:73:00:dc:01
     spanning_tree_mode: mstp
     spanning_tree_priority: 16384
+    mlag: false
   node_groups:
     DC1_L2LEAF1:
-      parent_l3leafs: [ DC1-LEAF1A, DC1-LEAF1B ]
+      uplink_switches: [ DC1-LEAF1A, DC1-LEAF1B ]
       filter:
         tenants: [ Tenant_A ]
         tags: [ opzone, web, app ]
@@ -109,9 +108,9 @@ l2leaf:
         DC1-L2LEAF1A:
           id: 5
           mgmt_ip: 10.255.0.17/24
-          l3leaf_interfaces: [ Ethernet5, Ethernet5 ]
+          uplink_switch_interfaces: [ Ethernet5, Ethernet5 ]
     DC1_L2LEAF2:
-      parent_l3leafs: [ DC1-LEAF2A, DC1-LEAF2B ]
+      uplink_switches: [ DC1-LEAF2A, DC1-LEAF2B ]
       filter:
         tenants: [ Tenant_A ]
         tags: [ opzone, web, app ]
@@ -119,28 +118,13 @@ l2leaf:
         DC1-L2LEAF2A:
           id: 7
           mgmt_ip: 10.255.0.18/24
-          l3leaf_interfaces: [ Ethernet5, Ethernet5 ]
+          uplink_switch_interfaces: [ Ethernet5, Ethernet5 ]
 
 #### Override for vEOS Lab Caveats ####
 
 # Disable update wait-for-convergence and update wait-for-install,
 # which is not supported in vEOS-LAB.
 # Refer to design guide
-
-spine_bgp_defaults:
-  #  - update wait-for-convergence
-  #  - update wait-install
-  - no bgp default ipv4-unicast
-  - distance bgp 20 200 200
-  - graceful-restart restart-time 300
-  - graceful-restart
-
-leaf_bgp_defaults:
-  #  - update wait-install
-  - no bgp default ipv4-unicast
-  - distance bgp 20 200 200
-  - graceful-restart restart-time 300
-  - graceful-restart
 
 # Update p2p mtu 9000 -> 1500
 p2p_uplinks_mtu: 1500
