--- a/inventory/intended/configs/DC1-L2LEAF1A.cfg
+++ b/inventory/intended/configs/DC1-L2LEAF1A.cfg
@@ -1,7 +1,7 @@
 !RANCID-CONTENT-TYPE: arista
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -ingestgrpcurl=10.255.0.1:9910 -cvcompression=gzip -ingestauth=key, -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -ingestvrf=MGMT -taillogs
+   exec /usr/bin/TerminAttr -cvaddr=10.255.0.1:9910 -cvvrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
    no shutdown
 !
 vlan internal order ascending range 1006 1199
@@ -11,8 +11,8 @@ transceiver qsfp default-mode 4x10G
 service routing protocols model multi-agent
 !
 hostname DC1-L2LEAF1A
-ip name-server vrf MGMT 192.168.2.1
 ip name-server vrf MGMT 8.8.8.8
+ip name-server vrf MGMT 192.168.2.1
 !
 ntp local-interface vrf MGMT Management1
 ntp server vrf MGMT 0.fr.pool.ntp.org prefer
@@ -22,6 +22,7 @@ spanning-tree mode mstp
 spanning-tree mst 0 priority 16384
 !
 no aaa root
+no enable password
 !
 username admin privilege 15 role network-admin secret sha512 $6$Df86J4/SFMDE3/1K$Hef4KstdoxNDaami37cBquTWOTplC.miMPjXVgQxMe92.e5wxlnXOLlebgPj8Fz1KO0za/RCO7ZIs4Q6Eiq1g1
 username ansible privilege 15 role network-admin secret sha512 $6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/
@@ -51,25 +52,32 @@ vlan 131
 vrf instance MGMT
 !
 interface Port-Channel1
-   description DC1-LEAF1A_Po5
+   description DC1_LEAF1_Po5
+   no shutdown
+   switchport
    switchport trunk allowed vlan 110-112,120-121,130-131
    switchport mode trunk
-   mlag 1
 !
 interface Ethernet1
    description DC1-LEAF1A_Ethernet5
+   no shutdown
    channel-group 1 mode active
 !
 interface Ethernet2
    description DC1-LEAF1B_Ethernet5
+   no shutdown
    channel-group 1 mode active
 !
 interface Ethernet5
    description server01_Eth0
+   no shutdown
+   switchport
    switchport access vlan 110
+   switchport mode access
 !
 interface Management1
    description oob_management
+   no shutdown
    vrf MGMT
    ip address 10.255.0.17/24
 !
@@ -78,10 +86,8 @@ no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 10.255.0.1
 !
-router bfd
-   multihop interval 1200 min-rx 1200 multiplier 3
-!
 management api http-commands
+   protocol https
    no shutdown
    !
    vrf MGMT
