--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -25,12 +25,16 @@ all:
         DC1_FABRIC:
           children:
             DC1_SPINES:
+              vars:
+                type: spine
               hosts:
                 DC1-SPINE1:
                   ansible_host: 10.255.0.11
                 DC1-SPINE2:
                   ansible_host: 10.255.0.12
             DC1_L3LEAFS:
+              vars:
+                type: l3leaf
               children:
                 DC1_LEAF1:
                   hosts:
@@ -45,6 +49,8 @@ all:
                     DC1-LEAF2B:
                       ansible_host: 10.255.0.16
             DC1_L2LEAFS:
+              vars:
+                type: l2leaf
               children:
                 DC1_L2LEAF1:
                   hosts:
