--- a/playbooks/dc1-fabric-deploy-cvp.yml
+++ b/playbooks/dc1-fabric-deploy-cvp.yml
@@ -15,7 +15,7 @@
     - name: generate intended variables
       tags: [build, generate]
       import_role:
-        name: arista.avd.eos_l3ls_evpn
+        name: arista.avd.eos_designs
 
     - name: generate device intended config and documentation
       tags: [build, generate]
@@ -38,3 +38,4 @@
         configlets_prefix: 'DC1-AVD'
         device_filter: 'DC1'
         state: present
+        cv_collection: v3
