--- a/inventory/group_vars/CVP.yml
+++ b/inventory/group_vars/CVP.yml
@@ -1,47 +1,52 @@
 ---
 ztp:
   default:
-    registration: 'http://10.255.0.1/ztp/bootstrap'
-    gateway: 10.255.0.3
+    registration: 'http://172.16.47.11/ztp/bootstrap'
+    gateway: 172.16.47.1
     nameservers:
-      - '10.255.0.3'
+      - '172.16.47.12'
   general:
     subnets:
-      - network: 10.255.0.0
+      - network: 172.16.47.0
         netmask: 255.255.255.0
-        gateway: 10.255.0.3
+        gateway: 172.16.47.1
         nameservers:
-          - '10.255.0.3'
-        start: 10.255.0.200
-        end: 10.255.0.250
-        lease_time: 300
+          - '172.16.47.12'
+        start: 172.16.47.21
+        end: 172.16.47.61
+        lease_time: 86400
   clients:
-  # GNS3 VM Request
-    - name: gns3
-      mac: '00:50:56:86:8b:2f'
-      ip4: 10.255.0.2
   # AVD/CVP Integration
-    - name: DC1-SPINE1
-      mac: '0c:1d:c0:1d:62:01'
-      ip4: 10.255.0.11
-    - name: DC1-SPINE2
-      mac: '0c:1d:c0:1d:62:02'
-      ip4: 10.255.0.12
-    - name: DC1-LEAF1A
-      mac: '0c:1d:c0:1d:62:11'
-      ip4: 10.255.0.13
-    - name: DC1-LEAF1B
-      mac: '0c:1d:c0:1d:62:12'
-      ip4: 10.255.0.14
-    - name: DC1-LEAF2A
-      mac: '0c:1d:c0:1d:62:21'
-      ip4: 10.255.0.15
-    - name: DC1-LEAF2B
-      mac: '0c:1d:c0:1d:62:22'
-      ip4: 10.255.0.16
-    - name: DC1-L2LEAF1A
-      mac: '0c:1d:c0:1d:62:13'
-      ip4: 10.255.0.17
-    - name: DC1-L2LEAF2A
-      mac: '0c:1d:c0:1d:62:23'
-      ip4: 10.255.0.18
+    - name: DC1_SPINE-1
+      mac: '28:99:3a:00:01:00'
+      ip4: 172.16.47.21
+    - name: DC1_SPINE-2
+      mac: '28:99:3a:00:02:00'
+      ip4: 172.16.47.22
+    - name: DC1_SPINE-3
+      mac: '28:99:3a:00:03:00'
+      ip4: 172.16.47.23
+    - name: DC1_SPINE-4
+      mac: '28:99:3a:00:04:00'
+      ip4: 172.16.47.24    
+    - name: DC1_LEAF-1A
+      mac: '28:99:3A:00:11:00'
+      ip4: 172.16.47.31
+    - name: DC1_LEAF-1B
+      mac: '28:99:3A:00:12:00'
+      ip4: 172.16.47.32
+    - name: DC1_LEAF-2A
+      mac: '28:99:3A:00:13:00'
+      ip4: 172.16.47.33
+    - name: DC1_LEAF-2B
+      mac: '28:99:3A:00:14:00'
+      ip4: 172.16.47.34
+    - name: DC1_LEAF-3A
+      mac: '28:99:3A:00:15:00'
+      ip4: 172.16.47.35
+    - name: DC1_LEAF-3B
+      mac: '28:99:3A:00:16:00'
+      ip4: 172.16.47.36
+    - name: DUT-1
+      mac: '28:99:3A:00:50:00'
+      ip4: 172.16.47.60
