Fix: typo in validation playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -14,6 +14,7 @@ stdout_callback = yaml
 # enable the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
 command_warnings=False
+log_path = ./logs.txt
 
 [persistent_connection]
 connect_timeout = 120
