--- a/playbooks/dc1-fabric-validate.yml
+++ b/playbooks/dc1-fabric-validate.yml
@@ -16,7 +16,7 @@
 
     - name: Validate State
       import_role:
-        name: arsita.avd.eos_validate_state
+        name: arista.avd.eos_validate_state
       vars:
         structured_dir: ../inventory/intended/structured_configs
         eos_validate_state_dir: ../inventory/reports
