Fix: Add routing for eAPI on default VRF
Without this change, the eAPI will only be available on the
MGMT vrf. The 10.255.x.x interface in ACT is only available
on the default VRF of EOS devices.

--- a/inventory/group_vars/DC1.yml
+++ b/inventory/group_vars/DC1.yml
@@ -38,6 +38,13 @@ mgmt_interface: Management1
 mgmt_interface_vrf: MGMT
 mgmt_gateway: 192.168.0.1
 
+# This is only required in the lab, to enable eAPI on
+# the default vrf as well
+custom_structured_configuration_management_api_http:
+  enable_vrfs:
+    MGMT: {}
+    default: {}
+
 # dns servers.
 name_servers:
   - 192.168.0.1
